[package]
name = "wssxhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.47.1", features = ["io-util", "rt"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
worker = "0.7.4"
futures-util = "0.3.31"
pin-project-lite = "0.2"
uuid = "1.18.1"
bytes = "1.10.1"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10.9"
md-5 = "0.10"
anyhow = "1.0.99"
reqwest = "0.12.23"
regex = "1.11.2"
once_cell = "1.21.3"
pretty-bytes = "0.2.2"
ipnet = "2.11.0"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha1 = "0.10"
blake3 = "1.5"

futures-channel = "0.3.32"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
